Closed Bug 210330 Opened 22 years ago Closed 20 years ago

Underlined links appear as overstrikes

Categories

(Core :: Layout: Text and Fonts, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: doug, Assigned: uriber)

References

()

Details

Attachments

(4 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.4) Gecko/20030612 Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.4) Gecko/20030612 At many sites, including the http://www.mozilla.org/start/ page, hotlinked text with underlines render as overstrikes instead of underlines. Reproducible: Always Steps to Reproduce: 1.Go to the site. That is it. 2. 3. Actual Results: As described above. Expected Results: Displayed the underlined links with underlines rather than overstrikes.
Over to mac gfx -- sounds like a platform font issue.
Assignee: general → sfraser
Component: Browser-General → GFX: Mac
QA Contact: general → ian
What font is the page being rendered in? If you change the default font, does the problem go away? What if you change the font size?
The font used here appears to be "Arial." Using that font, the page (as it now exists) WFM. However, the page is significantly different-looking now than when this bug was originally submitted, due to a site redesign. I always use "Arial" as my sans-serif font, though, and have never experienced this problem on any page. I'm currently using Mozilla 1.8a4 (8/28/04 build) under MacOSX 10.3.5. -- David Lawhon
I'm seeing this issue when the language is set to "he" (Hebrew), and the default font is used (regardless, it appears, of what the default font actually is). This bug is very easy to spot on the Hebrew Wikipedia (http://he.wikipedia.org). Testcase and screenshot coming up. Confirming bug. Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b2) Gecko/20050510 Firefox/1.0+
Assignee: sfraser_bugs → joshmoz
Status: UNCONFIRMED → NEW
Ever confirmed: true
QA Contact: ian → mac
Attached file testcase
Testcase with various combinations of language and font settings.
Attached image screenshot of testcase
Screenshot, with default font for Hebrew set to "Lucida Grande".
Attached patch patch (obsolete) — Splinter Review
My first-ever patch. Please be gentle! The issue was that the LangGroup information wasn't passed to GetMetricsFor() - which therefore used the default font associated with the default LangGroup. Since the metrics of this font could be different than those of the default font for the actual language used (Hebrew, in my example) - the underline ended up in the wrong place. I took the method for figuring out the LangGroup from nsFrame::SetFontFromStyle(). I hope this is correct. I guess this means this is not a Mac-specific bug. I sure hope I'm on the right bug at all (it's remotely possible that the original bug was not the same issue).
Assignee: joshmoz → nobody
Component: GFX: Mac → Layout: Fonts and Text
QA Contact: mac → layout.fonts-and-text
Comment on attachment 183335 [details] [diff] [review] patch requesting review from bzbarsky. Once again - this is my first patch. Please point out to me whatever I did wrong both in procedure and in code.
Attachment #183335 - Flags: review?(bzbarsky)
Comment on attachment 183335 [details] [diff] [review] patch Looks reasonable, though you should be able to just call GetStyleVisibility() (withou the GetStyleContext() part) on a frame. Going to ask Simon for the actual review, though, just in case. We seem to have very few people actually passing the style lang group to GetMetricsFor(); perhaps we need more followup bugs?
Attachment #183335 - Flags: superreview+
Attachment #183335 - Flags: review?(smontagu)
Attachment #183335 - Flags: review?(bzbarsky)
Attached patch patch v. 2Splinter Review
Patch with Boris' comment implemented. Carrying over flags (hope this is OK).
Attachment #183335 - Attachment is obsolete: true
Attachment #183372 - Flags: superreview+
Attachment #183372 - Flags: review?(smontagu)
Attachment #183372 - Flags: superreview+
Attachment #183293 - Attachment description: screenshot of perv. testcase → screenshot of testcase
Attachment #183335 - Flags: review?(smontagu)
(In reply to comment #10) > We seem to > have very few people actually passing the style lang group to GetMetricsFor(); > perhaps we need more followup bugs? Yes, I think we do. I said something similar in bug 100762.
Comment on attachment 183372 [details] [diff] [review] patch v. 2 r=smontagu.
Attachment #183372 - Flags: review?(smontagu) → review+
Comment on attachment 183372 [details] [diff] [review] patch v. 2 requesting 1.8b2 approval. This is a very safe patch that should make us paint text decorations better.
Attachment #183372 - Flags: approval1.8b2?
Comment on attachment 183372 [details] [diff] [review] patch v. 2 a=dbaron, although you really don't need the |visibility| variable at all...
Attachment #183372 - Flags: approval1.8b2? → approval1.8b2+
Assignee: nobody → uriber
Fixed.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: