Use the right langgroup when getting the font metrics for drawing text decorations.  Bug 210330, patch by Uri Bernstein <uriber@gmail.com>, r=smontagu, sr=bzbarsky, a=dbaron